# jarvis

./: .gitignore  README.md  config.py  main.py  pyproject.toml  run_api.py
agent/: agent_factory.py  core.py  supervisor.py
agent/specialists/: __init__.py  coder.py  researcher.py  writer.py
api/: main.py  models.py
api/routes/: chat.py  memory.py  projects.py
memory/: chat_history.json  memory.py  user_notes.json
memory/chats/: calculate-978975494546949-and-tell-me.json  calculate-978975494546949-and-tell-me.meta.json  chat-1777327645904.json  crypto.json  default.json  hello-jarvis-whats-the-time.json  test.json  what-is-jarvis.json
memory/projects/Test/chats/: hi-jarvis-how-is-the.json  hi-jarvis-testring-the-tools.json
memory/projects/jarvis/: project_notes.json
memory/projects/jarvis/chats/: debugging.json  hi-buddy-lets-start-with.json
reports/: agent_frameworks_2025.txt  ai_agents_analysis.txt  ai_companies_analysis.txt  bitcoin.txt  bitcoin_current.txt  btc_analysis.txt  crypto_investment.txt  leetcode_76_description.md  web3_blockchain_analysis.txt
tools/: calculator.py  code_executor.py  file_ops.py  notes.py  time_tool.py  web_search.py
workspace/scripts/: leetcode_76.cpp
