[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.1.16",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "tavily-python>=0.7.23",
    "uvicorn>=0.46.0",
]
